--- a/_site.yml
+++ b/_site.yml
@@ -13,6 +13,8 @@ navbar:
       menu:
       - text: "Blog #1"
         href: blog1.html
+      - text: "Linear Regression: Tidymodels"
+        href: tidymod.html
   right:
     - text: "Github"
       icon: fa-github
