--- a/_site.yml
+++ b/_site.yml
@@ -15,6 +15,8 @@ navbar:
         href: blog1.html
       - text: "Tidymodel regression"
         href: tidymod.html
+      - text: "Data Science use in PGA Analysis"
+        href: pgapost.html
   right:
     - text: "Github"
       icon: fa-github
